# Tiny-Manga-Downloader

./: .gitignore  LICENSE  Makefile  Makefile.am  README.md  configure.ac  configure.scan  dependencies  notes
man/: Makefile.am  manga-dl.1  tmdl.1
src/: Makefile  Makefile.am  avlTree.c  avlTree.h  blacklist.c  blacklist.h  chaptersToDownload.c  chaptersToDownload.h  cookieAvoider.py  curl.c  curl.h  curlTest.txt  currentChapter.c  currentChapter.h  customParser.c  customParser.h  entities.c  entities.h  experimental.c  experimental.h  generalMethods.c  generalMethods.h  hashMap.c  hashMap.h  htmlEntities.c  kissMangaDownload.c  kissMangaDownload.h  kissMangaRead.c  kissMangaRead.h  mangaSeeSupport.c  mangaSeeSupport.h  networking.c  networking.h  save.c  save.h  test  tmdl.c  tmdl.h  updater.c  updater.h
src/Naruto/: Naruto 000.cbz
tests/: avlTest.c  temp  temp2
tests/Koi no Mizu Kudasai/Downloading/: 19
tests/Witch Workshop/: .fingerprints.fid  .settings.tmdl
