AUTOMAKE_OPTIONS = foreign subdir-objects
AM_CFLAGS = -pedantic -Wall -std=gnu99
AM_LDFLAGS = -lm -lcurl -lpthread
bin_PROGRAMS = manga-dl
manga_dl_SOURCES = src/blacklist.c src/currentChapter.h src/generalMethods.c src/kissMangaDownload.h src/networking.c src/blacklist.h src/customParser.c src/generalMethods.h src/kissMangaRead.c src/networking.h src/chaptersToDownload.c src/customParser.h src/hashMap.c src/kissMangaRead.h src/tmdl.c src/chaptersToDownload.h src/experimental.c src/hashMap.h src/mangaSeeSupport.c src/tmdl.h src/currentChapter.c src/experimental.h src/kissMangaDownload.c src/mangaSeeSupport.h src/updater.c src/updater.h
man_MANS = man/manga-dl.1
