CFLAGS = -pedantic -Wall -std=gnu99
bin_PROGRAMS = manga-dl
manga-dl_SOURCES = blacklist.c currentChapter.h generalMethods.c kissMangaDownload.h networking.c blacklist.h customParser.c generalMethods.h kissMangaRead.c networking.h chaptersToDownload.c customParser.h hashMap.c kissMangaRead.h tmdl.c chaptersToDownload.h experimental.c hashMap.h mangaSeeSupport.c tmdl.h currentChapter.c experimental.h kissMangaDownload.c mangaSeeSupport.h
manga-dl_LDLIBS = -lm -lcurl -lpthread
